--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "lexical-playground",
-  "version": "1.0.3",
+  "version": "1.0.6",
   "private": false,
+  "main": "dist/index.tsx",
   "scripts": {
+    "build": "webpack --mode production",
     "dev": "vite --host",
     "build-dev": "vite build",
     "build-prod": "vite build --config vite.prod.config.js",
     "build-vercel": "(cd ../../ && node ./scripts/build.js --prod) && npm run build-prod",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "bundle": "rollup -c"
   },
   "dependencies": {
     "@babel/plugin-transform-flow-strip-types": "^7.19.0",
-    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-env": "^7.20.2",
     "@lexical/clipboard": "0.7.4",
     "@lexical/code": "0.7.4",
     "@lexical/file": "0.7.4",
     "@lexical/hashtag": "0.7.4",
+    "@lexical/headless": "^0.7.4",
     "@lexical/link": "0.7.4",
     "@lexical/list": "0.7.4",
     "@lexical/mark": "0.7.4",
@@ -26,7 +30,7 @@
     "@lexical/selection": "0.7.4",
     "@lexical/table": "0.7.4",
     "@lexical/utils": "0.7.4",
-    "@rollup/plugin-babel": "^6.0.3",
+    "babel-preset-es2015": "^6.24.1",
     "katex": "^0.15.2",
     "lexical": "0.7.4",
     "lodash-es": "^4.17.21",
@@ -34,14 +38,37 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "y-websocket": ">=1.3.x",
     "yjs": ">=13.5.42"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.7",
+    "@babel/preset-flow": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/jest": "^29.2.4",
+    "@types/katex": "^0.14.0",
     "@types/lodash-es": "^4.14.182",
+    "@types/node": "^18.11.17",
+    "@types/prettier": "^2.7.2",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^1.0.7",
+    "babel-loader": "^9.1.0",
+    "css-loader": "^6.7.3",
+    "expose-loader": "^4.0.0",
+    "file-loader": "^6.2.0",
+    "rollup": "^3.8.0",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.9.4",
     "vite": "^2.8.0",
-    "vite-plugin-replace": "0.1.1"
+    "vite-plugin-replace": "0.1.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "compilerOptions": {
     "strict": true,
@@ -54,5 +81,8 @@
     "declarationMap": true,
     "allowSyntheticDefaultImports": true
   },
-  "files": ["src/*"]
+  "files": [
+    "dist/*"
+  ],
+  "type": "module"
 }
